<resources>
    <string name="app_name">FilmBrowser</string>
    <string name="title_trending">Trending</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_daily_trending">Daily Trending</string>
    <string name="example_search">E.g. Avengers</string>
    <string name="results">Results</string>
    <string name="not_found">Not found</string>
    <string name="date">Date:</string>
    <string name="genres">Genres:</string>
    <string name="country">Country:</string>
    <string name="runtime">Runtime:</string>
    <string name="revenue">Revenue:</string>
    <string name="popularity">Popularity:</string>
    <string name="movie_details">Movie details</string>
    <string name="minutes">min.</string>
    <string name="internet_error">No Internet</string>
    <string name="overview">Overview</string>
    <string name="overview_stub">Avengers: Infinity War is a 2018 American superhero film based on the Marvel Comics superhero team the Avengers, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is the sequel to 2012\'s The Avengers and 2015\'s Avengers: Age of Ultron, and the nineteenth film in the Marvel Cinematic Universe (MCU). The film is directed by Anthony and Joe Russo, written by Christopher Markus and Stephen McFeely, and features an ensemble cast including Robert Downey Jr., Chris Hemsworth, Mark Ruffalo, Chris Evans, Scarlett Johansson, Benedict Cumberbatch, Don Cheadle, Tom Holland, Chadwick Boseman, Paul Bettany, Elizabeth Olsen, Anthony Mackie, Sebastian Stan, Danai Gurira, Letitia Wright, Dave Bautista, Zoe Saldana, Josh Brolin, and Chris Pratt. In the film, the Avengers and the Guardians of the Galaxy attempt to stop Thanos from amassing the all-powerful Infinity Stones.</string>
</resources>
